# GenDoc

./: .gitignore  README.md  design-spec.md  first-version-plan.md  gendoc.config.toml  output.md  project-goal.md  pyproject.toml
Documents/: src-gendoc-analysis-py.md  src-gendoc-cli-py.md  src-gendoc-config-py.md  src-gendoc-existing-docs-py.md  src-gendoc-pipeline-py.md  src-gendoc-prompting-py.md
docs/: prototype-notes.md
docs/generated1/: cross-reference.json  demo-output.md  prompt-ledger.jsonl
docs/generated1/demo-output_components/: llmchess-simple-agent-normalizer-py.md  llmchess-simple-batch-orchestrator-py.md  llmchess-simple-config-py.md  llmchess-simple-engine-opponent-py.md  llmchess-simple-game-py.md  llmchess-simple-human-opponent-py.md  llmchess-simple-llm-client-py.md  llmchess-simple-move-validator-py.md  llmchess-simple-prompting-py.md  llmchess-simple-providers-openai-provider-py.md  llmchess-simple-random-opponent-py.md  llmchess-simple-referee-py.md  scripts-run-py.md  scripts-run-tests-py.md
samples/demo_app/: README.md  main.py
src/gendoc/: __init__.py  analysis.py  cli.py  config.py  existing_docs.py  pipeline.py  prompting.py
src/gendoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/gendoc/sections/: __init__.py  run.py
